--- a/Graded_Quiz_1.ipynb
+++ b/Graded_Quiz_1.ipynb
@@ -628,20 +628,17 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'cc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-72dc34935e18>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcoal_cost_vs_year\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfuel_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfuel_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'fuel_type_code_pudl'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'coal'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'report_year'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'fuel_cost_per_unit_burned'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcoal_cost_vs_year_change_ratio\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mcc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1994\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mcc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1998\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mcc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1994\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'For the fuel type coal, the percentage change in the fuel cost per unit burned in 1998 compared to 1994 is:\\n{coal_cost_vs_year_change_ratio:.0%}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'cc' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For the fuel type coal, the percentage change in the fuel cost per unit burned in 1998 compared to 1994 is:\n",
+      "21%\n"
      ]
     }
    ],
    "source": [
     "coal_cost_vs_year = fuel_data[fuel_data['fuel_type_code_pudl'] == 'coal'].groupby('report_year').sum()['fuel_cost_per_unit_burned']\n",
-    "coal_cost_vs_year_change_ratio = (cc[1994] - cc[1998])/cc[1994]\n",
+    "coal_cost_vs_year_change_ratio = (coal_cost_vs_year[1994] - coal_cost_vs_year[1998])/coal_cost_vs_year[1994]\n",
     "print(f'For the fuel type coal, the percentage change in the fuel cost per unit burned in 1998 compared to 1994 is:\\n{coal_cost_vs_year_change_ratio:.0%}')"
    ]
   },
@@ -655,11 +652,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3564    1997\n",
+       "Name: report_year, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Method 1: check for the maximum value among all values \n",
     "fuel_data[fuel_data['fuel_cost_per_unit_delivered'] == max(fuel_data['fuel_cost_per_unit_delivered'])]['report_year']"
@@ -667,9 +676,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1997"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Method 2: sort in descending order and pick the first\n",
     "fuel_data.sort_values('fuel_cost_per_unit_delivered',ascending=False)['report_year'].iloc[0]"
@@ -677,9 +697,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The year with the highest average fuel cost per unit delivered is: \n",
+      "1997\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"The year with the highest average fuel cost per unit delivered is: \\n{fuel_data.sort_values('fuel_cost_per_unit_delivered',ascending=False)['report_year'].iloc[0]}\")"
    ]
