Updated Graded_Quiz_1.ipynb. Questions 3 and 3 were corrected

--- a/Graded_Quiz_1.ipynb
+++ b/Graded_Quiz_1.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "source": [
     "Question 3\n",
-    "Which of the following fuel type code has the lowest average fuel cost per unit burned?"
+    "Which of the following fuel type code has the lowest average fuel cost per unit burned?*"
    ]
   },
   {
@@ -214,22 +214,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7733    waste\n",
-       "Name: fuel_type_code_pudl, dtype: object"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Method 1: heck for the minimum value among all values \n",
-    "fuel_data[fuel_data['fuel_cost_per_unit_burned'] == min(fuel_data['fuel_cost_per_unit_burned'])]['fuel_type_code_pudl']"
+    "grouped_data_by_fuel_type = fuel_data.groupby('fuel_type_code_pudl').mean()['fuel_cost_per_unit_burned']"
    ]
   },
   {
@@ -240,7 +227,9 @@
     {
      "data": {
       "text/plain": [
-       "'waste'"
+       "fuel_type_code_pudl\n",
+       "gas    13.659397\n",
+       "Name: fuel_cost_per_unit_burned, dtype: float64"
       ]
      },
      "execution_count": 14,
@@ -249,8 +238,8 @@
     }
    ],
    "source": [
-    "#Method 2: sort in ascending order and pick the first\n",
-    "fuel_data.sort_values('fuel_cost_per_unit_burned',ascending=True).iloc[0]['fuel_type_code_pudl']"
+    "#Method 1: check for the minimum value among all values \n",
+    "grouped_data_by_fuel_type[grouped_data_by_fuel_type == min(grouped_data_by_fuel_type)]"
    ]
   },
   {
@@ -259,16 +248,37 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'gas'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Method 2: sort in ascending order and pick the first\n",
+    "grouped_data_by_fuel_type.sort_values(ascending=True).index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "The fuel type code with the lowest average fuel cost per unit burned is: \n",
-      "waste\n"
+      "gas\n"
      ]
     }
    ],
    "source": [
-    "print(f\"The fuel type code with the lowest average fuel cost per unit burned is: \\n{fuel_data.sort_values('fuel_cost_per_unit_burned',ascending=True).iloc[0]['fuel_type_code_pudl']}\")"
+    "print(f\"The fuel type code with the lowest average fuel cost per unit burned is: \\n{grouped_data_by_fuel_type.sort_values(ascending=True).index[0]}\")"
    ]
   },
   {
@@ -281,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +441,7 @@
        "max          359278.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +585,7 @@
        "'\\nThe data is Categorical and imputation is mode imputation\\n'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,12 +601,12 @@
    "metadata": {},
    "source": [
     "Question 8\n",
-    "Which of the features has the second and third lowest correlation with the Fuel Cost Per Unit Burned?"
+    "Which of the features has the second and third lowest correlation with the Fuel Cost Per Unit Burned?*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -604,13 +614,13 @@
      "output_type": "stream",
      "text": [
       "The following features are the second and third lowest correlation with the Fuel Cost Per Unit Burned: \n",
-      "fuel_qty_burned and fuel_mmbtu_per_unit\n"
+      "fuel_mmbtu_per_unit and fuel_cost_per_unit_delivered\n"
      ]
     }
    ],
    "source": [
     "#We first find the correlation then sort with the feature given in ascending order then pick the 2nd and 3rd by slicing\n",
-    "sec_and_third_list = list(fuel_data.corr().sort_values('fuel_cost_per_unit_burned',ascending=True).index[1:3])\n",
+    "sec_and_third_list = list(fuel_data.corr().abs().sort_values('fuel_cost_per_unit_burned',ascending=True).index[1:3])\n",
     "print(f\"The following features are the second and third lowest correlation with the Fuel Cost Per Unit Burned: \\n{' and '.join(sec_and_third_list)}\")"
    ]
   },
@@ -624,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -664,7 +674,7 @@
        "Name: report_year, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +695,7 @@
        "1997"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -714,11 +724,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "NOTE: Some edits were done to further improve the accuracy of this notebook. \n",
+    "      The most recent edit corrected questions 3 and 8."
+   ]
   }
  ],
  "metadata": {
